--- a/server-settings.json
+++ b/server-settings.json
@@ -43,7 +43,7 @@
   "auto_pause": true,
   "only_admins_can_pause_the_game": false,
   "_comment_autosave_only_on_server": "Whether autosaves should be saved only on server or also on all connected clients. Default is true.",
-  "autosave_only_on_server": true,
+  "autosave_only_on_server": false,
   "_comment_non_blocking_saving": "Highly experimental feature, enable only at your own risk of losing your saves. On UNIX systems, server will fork itself to create an autosave. Autosaving on connected Windows clients will be disabled regardless of autosave_only_on_server option.",
   "non_blocking_saving": false,
   "_comment_segment_sizes": "Long network messages are split into segments that are sent over multiple ticks. Their size depends on the number of peers currentconnected. Increasing the segment size will increase upload bandwidth requirement for the server and download bandwidth requirement for clients. This, setting only affects server outbound messages. Changing these settings can have a negative impact on connection stability for some clients.",
